# Flappy-Bird-SFML

./: .gitignore  CMakeLists.txt  FlappyBird_Project_Report.docx  README.md  REPORT.md  build.bat  build_ninja.bat
include/: AssetManager.h  Bird.h  Game.h  Pipe.h
src/: AssetManager.cpp  Bird.cpp  Game.cpp  Pipe.cpp
